--- a/Weather Note/Views/Notes/Index.cshtml
+++ b/Weather Note/Views/Notes/Index.cshtml
@@ -23,7 +23,6 @@
         </th>
         <th></th>
     </tr>
-
 @foreach (var item in Model) {
     <tr>
         <td>
@@ -32,7 +31,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Message)
         </td>
-        <td>@Html.DisplayText("Under construction.")</td>
+        <td>
+        @Html.DisplayFor(modelItem => item.MaxTemp)
+        </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ID }) |
@@ -40,5 +41,5 @@
         </td>
     </tr>
 }
-
 </table>
+
