--- a/Weather Note/Views/Notes/Delete.cshtml
+++ b/Weather Note/Views/Notes/Delete.cshtml
@@ -5,11 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h1>Note Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Note</h4>
+<h2>Are you sure you want to delete this?</h2>
+<div class="div-input-style">
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,8 +33,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="button-style" /> |
+            <div class="link-style">
+                @Html.ActionLink("Back to List", "Index")
+            </div>
         </div>
     }
 </div>
