--- a/Weather Note/Views/Notes/Details.cshtml
+++ b/Weather Note/Views/Notes/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h1>Note Details</h1>
 
-<div>
-    <h4>Note</h4>
+<div class="div-input-style">
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,7 +28,7 @@
 
     </dl>
 </div>
-<p>
+<div class="link-style">
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
-</p>
+</div>
