I have improved the search logic with some regex. Now you can search for many different words and the Note with a message that contains all the words will return to the view.

--- a/Weather Note/Content/mystylesheet.css
+++ b/Weather Note/Content/mystylesheet.css
@@ -1,4 +1,6 @@
-﻿/*//My stylesheet made with http://divtable.com/table-styler/ */
+﻿/*//My stylesheet, everything with "table.tangjaiTable" is made with http://divtable.com/table-styler/ 
+    The rest is written.
+*/
 body {
     background-color:darkgoldenrod;
 }
