I have fixed the final design for the project.

--- a/Weather Note/Views/Notes/Index.cshtml
+++ b/Weather Note/Views/Notes/Index.cshtml
@@ -15,7 +15,7 @@
 @using (Html.BeginForm())
 {
     <div class="div-input-style">
-        Find By Message: @Html.TextBox("SearchTerm")
+        Find By Message: @Html.TextBox("SearchString")
         <input class="button-style" type="submit" value="Search" />
     </div>
 }
