--- a/Weather Note/Views/Notes/Edit.cshtml
+++ b/Weather Note/Views/Notes/Edit.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "div-input-style control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @Value = Model.Date.ToShortDateString()  ,@class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -49,4 +49,12 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+ <!--Script for the datepicker.-->
+<script type="text/javascript">
+        $(function () {
+            $('#Date').datepicker({
+                dateFormat: "yy-mm-dd"
+            });
+        });
+</script>
 }
